# mercury-dots

./: .gitignore  README.md  install.sh
.config/cava/: colors  config
.config/hypr/: config.json.example  default_settings.json  hypridle.conf  hyprland.conf
.config/hypr/config/: autostart.conf  colors.conf  env.conf  hyprbars.conf  keybindings.conf  monitors.conf  overrides.conf  rules.conf  settings.conf
.config/hypr/provisioning/accounts/: provision-accounts.sh
.config/hypr/provisioning/alexandria/: Dockerfile.rocm  alexandria.build  alexandria.container  audiobook-night.service  audiobook-night.timer
.config/hypr/provisioning/gemma/: gemma.service.in  gemma4-server.sh
.config/hypr/provisioning/gluetun/: gluetun.container  gluetun.env.example
.config/hypr/scripts/: airpods_librepods.sh  airpods_toggle.sh  apollo_pair.sh  athena.sh  audiobook_night.py  caching.sh  close_active.sh  fetch_sysinfo.sh  float_toggle.sh  gaming_passthrough_sync.sh  hyprpm_ensure.sh  init.sh  keyring_init.sh  keyring_migrate.sh  news.env.example  news_fetch.py  overlay_passthrough.sh  podman_relink.sh  qs_manager.sh  reload.sh  reload_apps_language.sh  screenshot.sh  secrets.sh  set_system_language.sh  settings_watcher.sh  steam_games.sh  valorant.sh  volume_listener.sh  wait_autobrowse.sh
.config/hypr/scripts/quickshell/floating/obsidian-shell/: CMakeLists.txt  build.sh  main.cpp
.config/hypr/scripts/quickshell/floating/obsidian-shell/qml/: Floating.qml
.config/hypr/scripts/quickshell/pip/mpvplugin/: CMakeLists.txt  MpvItem.cpp  MpvItem.h  build.sh
.config/hypr/templates/: env.conf.template  settings.conf.template
.config/kitty/: kitty-matugen-colors.conf
.config/matugen/: config.toml
.config/matugen/templates/: qs_colors.json.template
.config/swayosd/: style.css
(+118 files in other folders)
